--- a/about.html
+++ b/about.html
@@ -33,13 +33,8 @@
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="contact.html">Reach Out to Us</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
