--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="contact.html">Reach Out to Us</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -60,8 +55,7 @@
             </div>
             <div class="col-md-8">
               <h1 class="display-3">Hardware Solutions</h1>
-              <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-              <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus felis quam, pharetra sit amet diam id, condimentum viverra diam. Suspendisse.</p>
             </div>
           </div>
         </div>
